--- a/index.html
+++ b/index.html
@@ -305,12 +305,11 @@
                   </div>
                   
                 </div>
-                <div class="skills__data">
+                <!-- <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Javascript</h3>
                   </div>
-                  
-                </div>
+                </div> -->
                 <div class="skills__data">
                   <div class="skills__titles">
                     <h3 class="skills__name">Node Js</h3>
@@ -606,7 +605,7 @@
               </div>
             </div>
 
-            <!-- ------------------------portfollio 2-------------------- -->
+            <!-- ------------------------portfolio 2-------------------- -->
 
             <div class="portfolio__content grid swiper-slide">
               <img src="assets/img/portfolio2.png" class="portfolio__img" />
@@ -653,6 +652,32 @@
                 </a>
                 <a
                   href="https://tic-tac-toe-game-omega-tawny.vercel.app/"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
+
+            <!-- ------------------------portfolio 4-------------------- -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio4.png" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Rock Paper Scissors Game</h3>
+                <p class="portfolio__description">
+                  A fun and responsive two-player Rock Paper Scissors game built using HTML, CSS, and JavaScript. 
+                </p>
+                <a
+                  href="https://github.com/laxman-goud/rock-paper-scissors"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  GitHub Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://rock-paper-scissors-iota-sooty.vercel.app"
                   class="button button--flex button--small portfolio__button"
                 >
                   See Live
