Added New Project bubble game

--- a/index.html
+++ b/index.html
@@ -685,6 +685,33 @@
                 </a>
               </div>
             </div>
+            <!-- ------------------------portfolio 5 -------------------- -->
+            <div class="portfolio__content grid swiper-slide">
+              <img src="assets/img/portfolio5.png" class="portfolio__img" />
+
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Bubble Pop Game</h3>
+                <p class="portfolio__description">
+                  Bubble Pop Game is a fun and interactive web game 
+                  built with HTML, CSS, and JavaScript. In this game, bubbles 
+                  (each displaying a random number from 0 to 24) are dynamically generated and arranged within a responsive game area.
+                </p>
+                <a
+                  href="https://github.com/laxman-goud/bubble-game"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  GitHub Repository
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+                <a
+                  href="https://bubble-pop-game-tau.vercel.app"
+                  class="button button--flex button--small portfolio__button"
+                >
+                  See Live
+                  <i class="uil uil-external-link-alt button__icon"></i>
+                </a>
+              </div>
+            </div>
 
           <!-- add arrows -->
           <div class="swiper-button-next">
