--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">03+</span>
+              <span class="about__info-title">04+</span>
               <span class="about__info-name">Months <br />experience</span>
             </div>
           </div>
@@ -195,12 +195,12 @@
 
               </div>
 
-              <div class="skills__data">
+              <!-- <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">Java</h3>
                 </div>
 
-              </div>
+              </div> -->
               <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">JavaScript</h3>
@@ -216,7 +216,7 @@
           </div>
 
           <!--==================== Skill 2 =================-->
-          <div class="skills__content skills__close">
+          <!-- <div class="skills__content skills__close">
             <div class="skills__header">
               <i class="fas fa-code skills__icon"></i>
 
@@ -254,7 +254,7 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div>
@@ -302,19 +302,19 @@
 
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">Tailwind CSS</h3>
+                  <h3 class="skills__name">Express js</h3>
                 </div>
               </div>
 
-              <div class="skills__data">
+              <!-- <div class="skills__data">
                 <div class="skills__titles">
                   <h3 class="skills__name">MySQL</h3>
-                </div>
+                </div> -->
 
-              </div>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
 
@@ -658,6 +658,29 @@
               </a>
             </div>
           </div>
+          <!-- ------------------------portfolio 6 -------------------- -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/spotify-clone.png" class="portfolio__img" />
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Spotify Clone</h3>
+              <p class="portfolio__description">
+                A responsive Spotify-inspired music player built using HTML, CSS, and JavaScript.
+                It features album cards, dynamic song loading from JSON files, audio controls, and a sleek UI.
+              </p>
+              <a href="https://github.com/laxman-goud/spotify-clone"
+                class="button button--flex button--small portfolio__button">
+                GitHub Repository
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+              <a href="https://spotify-clone-pi-bay.vercel.app"
+                class="button button--flex button--small portfolio__button">
+                See Live
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
+
 
           <!-- add arrows -->
           <div class="swiper-button-next">
@@ -735,7 +758,7 @@
 
       </div>
     </section>
-    
+
   </main>
 
   <!--🔥 ================== Footer ===============-->
