updated bio, footer, about sections

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               Computer Science Engineering Student
             </h3>
             <p class="home__description">
-              A second-year undergraduate engineering student at
+              A third-year undergraduate engineering student at
               <strong>Mallareddy Engineering College</strong>, Hyderabad.
             </p>
             <a href="#contact" class="button button--flex">
@@ -131,7 +131,7 @@
       <span class="section__subtitle">My introduction</span>
 
       <div class="about__container container grid">
-        <img src="https://pbs.twimg.com/profile_images/1771175463660240896/hasiR940.jpg" alt="" class="about__img" />
+        <!-- <img src="https://pbs.twimg.com/profile_images/1771175463660240896/hasiR940.jpg" alt="" class="about__img" /> -->
 
         <div class="about__data">
           <p class="about__description">
@@ -556,7 +556,7 @@
                 GitHub Repository
                 <i class="uil uil-external-link-alt button__icon"></i>
               </a>
-              <a href="https://netflix-clone-landing-page-wheat.vercel.app/"
+              <a href="https://netflix-clone-landing-page-git-main-laxmans-projects-45dbf65c.vercel.app"
                 class="button button--flex button--small portfolio__button">
                 See Live
                 <i class="uil uil-external-link-alt button__icon"></i>
@@ -767,7 +767,7 @@
       <div class="footer__container container grid">
         <div>
           <h1 class="footer__title">Laxman</h1>
-          <span class="footer__subtitle">Computer Science Engineering Student</span>
+          <span class="footer__subtitle">Aspiring Web Developer</span>
         </div>
 
         <ul class="footer__links">
