update - projects, skills section

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
                 </div>
               </div>
 
-              <!-- <div class="skills__data">
+              <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">MySQL</h3>
-                </div> -->
+                  <h3 class="skills__name">mongoDB</h3>
+                </div>
 
             </div>
           </div>
@@ -556,11 +556,11 @@
                 GitHub Repository
                 <i class="uil uil-external-link-alt button__icon"></i>
               </a>
-              <a href="https://netflix-clone-landing-page-git-main-laxmans-projects-45dbf65c.vercel.app"
+              <!-- <a href=""
                 class="button button--flex button--small portfolio__button">
                 See Live
                 <i class="uil uil-external-link-alt button__icon"></i>
-              </a>
+              </a> -->
             </div>
           </div>
 
