added - new project notes app

--- a/index.html
+++ b/index.html
@@ -680,6 +680,27 @@
               </a>
             </div>
           </div>
+          <!-- ------------------------portfolio 7 -------------------- -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/NodeNote-App.png" class="portfolio__img" />
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">NodeNote App</h3>
+              <p class="portfolio__description">
+                A full-stack Notes App built with Node.js, Express, MongoDB, and EJS. Features Google OAuth login, note CRUD, search, pagination, and session-based authentication.
+              </p>
+              <a href="https://github.com/laxman-goud/notes-app"
+                class="button button--flex button--small portfolio__button">
+                GitHub Repository
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+              <a href="https://notes-app-p8om.onrender.com"
+                class="button button--flex button--small portfolio__button">
+                See Live
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
 
 
           <!-- add arrows -->
