--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="skills__list grid">
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">C</h3>
+                  <h3 class="skills__name">JavaScript</h3>
                 </div>
 
               </div>
@@ -203,13 +203,13 @@
               </div> -->
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">JavaScript</h3>
+                  <h3 class="skills__name">Python</h3>
                 </div>
 
               </div>
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">Python</h3>
+                  <h3 class="skills__name">C</h3>
                 </div>
               </div>
             </div>
@@ -289,7 +289,7 @@
                 </div> -->
               <div class="skills__data">
                 <div class="skills__titles">
-                  <h3 class="skills__name">Node Js</h3>
+                  <h3 class="skills__name">Node js</h3>
                 </div>
 
               </div>
@@ -310,7 +310,12 @@
                 <div class="skills__titles">
                   <h3 class="skills__name">mongoDB</h3>
                 </div>
+            </div>
 
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">React js</h3>
+                </div>
             </div>
           </div>
         </div>
