added new project - TickIt

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 
         <div class="about__data">
           <p class="about__description">
-            Passionate about crafting visually appealing and user-friendly digital experiences, I am currently learning
-            web development alongside UI/UX design. I enjoy combining creativity with technology to build intuitive
-            and engaging interfaces.
+            I'm a 3rd-year CSE student passionate about building clean, scalable web apps using the MERN stack. 
+            I enjoy turning ideas into responsive, real-world solutions with HTML, CSS, JavaScript, React, and Node.js. 
+            Currently contributing to open source and always open to collaboration. Let’s build something great together!
           </p>
 
           <div class="about__info">
@@ -147,14 +147,14 @@
             </div>
 
             <div>
-              <span class="about__info-title">05+</span>
+              <span class="about__info-title">08+</span>
               <span class="about__info-name">
                 Projects</span>
             </div>
 
             <div>
               <span class="about__info-title">04+</span>
-              <span class="about__info-name">Months <br />experience</span>
+              <span class="about__info-name">Months <br /> OSS Contribution</span>
             </div>
           </div>
 
@@ -700,6 +700,27 @@
                 <i class="uil uil-external-link-alt button__icon"></i>
               </a>
               <a href="https://nodenote.up.railway.app"
+                class="button button--flex button--small portfolio__button">
+                See Live
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
+          <!-- ------------------------portfolio 7 -------------------- -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/tickit-app.png" class="portfolio__img" />
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">TickIt – Manage Your Todos at One Place</h3>
+              <p class="portfolio__description">
+                TickIt is a sleek and simple productivity web app built using React and Tailwind CSS that helps you track your daily tasks efficiently. It allows users to add, edit, mark as complete, and delete todos in an interactive and responsive UI.
+              </p>
+              <a href="https://github.com/laxman-goud/TickIt"
+                class="button button--flex button--small portfolio__button">
+                GitHub Repository
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+              <a href="https://tick-it-iota.vercel.app/"
                 class="button button--flex button--small portfolio__button">
                 See Live
                 <i class="uil uil-external-link-alt button__icon"></i>
