added project - nike landing page

--- a/index.html
+++ b/index.html
@@ -727,6 +727,27 @@
               </a>
             </div>
           </div>
+          <!-- ------------------------portfolio 8 -------------------- -->
+          <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/nike-landing-page.png" class="portfolio__img" />
+
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Nike Landing Page – Modern, Responsive Product Showcase</h3>
+              <p class="portfolio__description">
+                The Nike Landing Page is a visually striking and fully responsive web project built using React, Tailwind CSS, and Vite. It showcases Nike products with smooth scrolling, interactive sections, and a clean, modern UI. Featuring reusable components, optimized performance, and mobile-first design, this landing page emphasizes both aesthetics and functionality—perfect for presenting a brand or product in a professional way.
+              </p>
+              <a href="https://github.com/laxman-goud/nike_landing_page"
+                class="button button--flex button--small portfolio__button">
+                GitHub Repository
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+              <a href="https://nike-landing-page-tan-delta.vercel.app"
+                class="button button--flex button--small portfolio__button">
+                See Live
+                <i class="uil uil-external-link-alt button__icon"></i>
+              </a>
+            </div>
+          </div>
 
 
           <!-- add arrows -->
