docs: update notes-app project links

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
                 GitHub Repository
                 <i class="uil uil-external-link-alt button__icon"></i>
               </a>
-              <a href="https://nodenote.up.railway.app"
+              <a href="https://notes-app-p8om.onrender.com/"
                 class="button button--flex button--small portfolio__button">
                 See Live
                 <i class="uil uil-external-link-alt button__icon"></i>
